[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/UI/Main Menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/tests/Main.tscn" type="PackedScene" id=2]
[ext_resource path="res://Pixeled.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/UI/AboutDialog.gd" type="Script" id=4]
[ext_resource path="res://tilesets/streetsv2_tileset.tres" type="TileSet" id=5]
[ext_resource path="res://scenes/objects/MenuPerson.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 22
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 4
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
nextScene = ExtResource( 2 )

[node name="Decorative Enemies" type="Node" parent="."]

[node name="Menu" parent="Decorative Enemies" instance=ExtResource( 6 )]

[node name="Menu2" parent="Decorative Enemies" instance=ExtResource( 6 )]
position = Vector2( 105.236, 85.8906 )

[node name="Menu3" parent="Decorative Enemies" instance=ExtResource( 6 )]
position = Vector2( 109.879, 266.955 )

[node name="Menu4" parent="Decorative Enemies" instance=ExtResource( 6 )]
position = Vector2( 214.339, 77.3791 )

[node name="Menu5" parent="Decorative Enemies" instance=ExtResource( 6 )]
position = Vector2( 477.424, 57.2608 )

[node name="Menu6" parent="Decorative Enemies" instance=ExtResource( 6 )]
position = Vector2( 545.516, 127.675 )

[node name="Menu7" parent="Decorative Enemies" instance=ExtResource( 6 )]
position = Vector2( 386.892, 61.1297 )

[node name="Menu8" parent="Decorative Enemies" instance=ExtResource( 6 )]
position = Vector2( 475.102, 255.348 )

[node name="Menu9" parent="Decorative Enemies" instance=ExtResource( 6 )]
position = Vector2( 526.946, 352.845 )

[node name="Menu10" parent="Decorative Enemies" instance=ExtResource( 6 )]
position = Vector2( 579.563, 254.575 )

[node name="Menu11" parent="Decorative Enemies" instance=ExtResource( 6 )]
position = Vector2( 153.984, 205.826 )

[node name="Menu12" parent="Decorative Enemies" instance=ExtResource( 6 )]
position = Vector2( 221.303, 362.904 )

[node name="Menu13" parent="Decorative Enemies" instance=ExtResource( 6 )]
position = Vector2( 326.537, 245.289 )

[node name="Menu14" parent="Decorative Enemies" instance=ExtResource( 6 )]
position = Vector2( 23.2153, 33.2736 )

[node name="Menu15" parent="Decorative Enemies" instance=ExtResource( 6 )]
position = Vector2( 30.9531, 167.911 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
format = 1
tile_data = PoolIntArray( -131063, 0, 0, -65536, 3, 0, -65535, 3, 0, -65534, 3, 0, -65533, 3, 0, -65532, 0, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65528, 3, 0, -65527, 0, 0, 0, 4, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 0, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 0, 0, 10, 3, 0, 11, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 0, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 0, 0, 65546, 3, 0, 65547, 3, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 2, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 2, 0, 131082, 1, 0, 131083, 1, 0, 196608, 3, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 0, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 0, 0, 196618, 3, 0, 196619, 3, 0, 262144, 3, 0, 262145, 4, 0, 262146, 3, 0, 262147, 3, 0, 262148, 0, 0, 262149, 3, 0, 262150, 3, 0, 262151, 4, 0, 262152, 3, 0, 262153, 0, 0, 262154, 3, 0, 262155, 3, 0, 327680, 3, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 0, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 0, 0, 327690, 3, 0, 327691, 3, 0, 393220, 0, 0, 393225, 0, 0, 393226, 3, 0, 393227, 3, 0, 458756, 0, 0, 458761, 0, 0, 458762, 3, 0, 458763, 3, 0 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 128.679
margin_top = 6.90377
margin_right = 548.679
margin_bottom = 76.9038
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[wave amp=10]UNTITLED STRATEGY GAME"
text = "UNTITLED STRATEGY GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play Button" type="Button" parent="."]
margin_left = 220.983
margin_top = 126.587
margin_right = 434.983
margin_bottom = 228.587
custom_fonts/font = SubResource( 2 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jam Link Button" type="Button" parent="."]
margin_left = 235.368
margin_top = 263.526
margin_right = 423.368
margin_bottom = 292.526
text = "Check out the Game Jam"

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "prerelease"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = -6.3158
margin_top = -6.3158
margin_right = 645.684
margin_bottom = 368.684
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
anims/fade_in = SubResource( 3 )

[node name="About Button" type="Button" parent="."]
margin_left = 491.578
margin_top = 175.789
margin_right = 549.578
margin_bottom = 195.789
text = "ABOUT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutDialog" type="AcceptDialog" parent="About Button"]
margin_left = -438.053
margin_top = -103.526
margin_right = 101.947
margin_bottom = 79.4736
window_title = "About this game"
resizable = true
dialog_text = "Made by William Djalal (SoulPixel) and Elias Vincent Simon (Riesyeti).

For the Godot Wild Jam 22. All game assets were done by us.

Made with the Godot Engine. Visit godotengine.org/license"
dialog_autowrap = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Source Link Button" type="Button" parent="."]
margin_left = 235.0
margin_top = 308.0
margin_right = 424.0
margin_bottom = 339.0
text = "Check out the Source Code"

[node name="Enemies" type="Node" parent="."]

[node name="Tutorial Button" type="Button" parent="."]
margin_left = 59.5809
margin_top = 171.779
margin_right = 162.581
margin_bottom = 191.779
text = "HOW TO PLAY"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Play Button" to="." method="_on_Play_Button_pressed"]
[connection signal="pressed" from="Jam Link Button" to="." method="_on_Jam_Link_Button_pressed"]
[connection signal="pressed" from="About Button" to="." method="_on_About_Button_pressed"]
[connection signal="custom_action" from="About Button/AboutDialog" to="." method="_on_AboutDialog_custom_action"]
[connection signal="pressed" from="Source Link Button" to="." method="_on_Source_Link_Button_pressed"]
[connection signal="pressed" from="Source Link Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Tutorial Button" to="." method="_on_Tutorial_Button_pressed"]
